[gd_scene load_steps=58 format=2]

[ext_resource path="res://scenes/level/character/player/Player.gd" type="Script" id=1]
[ext_resource path="res://data/images/character/player/PlayerFrames.png" type="Texture" id=2]
[ext_resource path="res://data/images/character/player/HorseFrames.png" type="Texture" id=3]

[sub_resource type="SegmentShape2D" id=52]
a = Vector2( -15, 15 )
b = Vector2( 15, 15 )

[sub_resource type="CapsuleShape2D" id=49]
radius = 13.0
height = 52.0

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 1.5, 5 )

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 1.5, 5 )

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 1.5, 5 )

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 0.5, 15 )

[sub_resource type="CircleShape2D" id=50]
radius = 9.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 192, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 128, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 64, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 256, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 192, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 128, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 64, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 256, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 192, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 128, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 64, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 0, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 256, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 0, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 64, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 128, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 192, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 256, 512, 64, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 41 ), SubResource( 40 ), SubResource( 39 ), SubResource( 38 ), SubResource( 37 ), SubResource( 36 ), SubResource( 35 ), SubResource( 34 ), SubResource( 33 ), SubResource( 32 ), SubResource( 31 ), SubResource( 30 ), SubResource( 29 ), SubResource( 28 ), SubResource( 27 ), SubResource( 26 ), SubResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 42 ) ],
"loop": false,
"name": "evade",
"speed": 1.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": false,
"name": "reload",
"speed": 3.0
} ]

[sub_resource type="Animation" id=48]
resource_name = "HorseGallop"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("HorseSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerArea2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 0 ), Vector2( 0, 1 ), Vector2( 1, -1 ), Vector2( 3, -1 ), Vector2( 1, 1 ), Vector2( 2, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HorseSprite/PlayerLegs:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, 4 ), Vector2( 0, 6 ), Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( -1, 4 ), Vector2( 0, 4 ) ]
}

[node name="Horse" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 1 )

[node name="PaddingCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 52 )
disabled = true

[node name="HorseCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 49 )

[node name="HorseBulletDamageArea2D" type="Area2D" parent="." groups=["Horse", "Player"]]
z_index = 2
collision_layer = 2
collision_mask = 0

[node name="RearLeftCollisionShape2D" type="CollisionShape2D" parent="HorseBulletDamageArea2D"]
position = Vector2( -5, -10 )
shape = SubResource( 53 )

[node name="RearRightCollisionShape2D" type="CollisionShape2D" parent="HorseBulletDamageArea2D"]
position = Vector2( 5, -10 )
shape = SubResource( 54 )

[node name="FrontCollisionShape2D" type="CollisionShape2D" parent="HorseBulletDamageArea2D"]
position = Vector2( 1, 37 )
shape = SubResource( 55 )

[node name="HorseKickDamageArea2D" type="Area2D" parent="." groups=["Horse", "Player"]]
z_index = 2
collision_layer = 4
collision_mask = 0

[node name="LeftCollisionShape2D" type="CollisionShape2D" parent="HorseKickDamageArea2D"]
position = Vector2( -8, 7 )
shape = SubResource( 56 )

[node name="RightCollisionShape2D" type="CollisionShape2D" parent="HorseKickDamageArea2D"]
position = Vector2( 8, 7 )
shape = SubResource( 56 )

[node name="HorseSprite" type="Sprite" parent="."]
position = Vector2( 2, 0 )
texture = ExtResource( 3 )
hframes = 6

[node name="PlayerLegs" type="Sprite" parent="HorseSprite"]
position = Vector2( -2, 4 )
scale = Vector2( 1.1, 1.16667 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 21.3915, 603, 20.5222, 12 )

[node name="PlayerArea2D" type="Area2D" parent="." groups=["Character", "Player"]]
position = Vector2( 1, 0 )
collision_layer = 2
collision_mask = 0

[node name="PlayerCollisionShape2D" type="CollisionShape2D" parent="PlayerArea2D"]
position = Vector2( -2, 11 )
shape = SubResource( 50 )

[node name="PlayerAnimatedSprite" type="AnimatedSprite" parent="PlayerArea2D"]
position = Vector2( -11, 9 )
frames = SubResource( 2 )
animation = "reload"

[node name="MuzzlePositions" type="Node2D" parent="PlayerArea2D"]
position = Vector2( -7, 15 )
scale = Vector2( 0.6, 0.6 )

[node name="pos0" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -8.47302, 41.37 )

[node name="pos1" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -18.1843, 41.4311 )

[node name="pos2" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -29.6622, 40.5683 )

[node name="pos3" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -37.6588, 37.7404 )

[node name="pos4" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -45.62, 30.747 )

[node name="pos5" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -56.6503, 22.6057 )

[node name="pos6" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -60.4258, 11.865 )

[node name="pos7" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -62.8607, 4.61487 )

[node name="pos8" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -64.182, -5.935 )

[node name="pos9" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -63.1502, -13.7731 )

[node name="pos10" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -63.5878, -20.1431 )

[node name="pos11" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -63.1663, -26.6321 )

[node name="pos12" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -61.6517, -33.7067 )

[node name="pos13" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -59.3287, -39.2428 )

[node name="pos14" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -53.9097, -47.2592 )

[node name="pos15" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -44.755, -54.469 )

[node name="pos16" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -39.4727, -63.7979 )

[node name="pos17" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -33.0544, -67.3966 )

[node name="pos18" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -26.1119, -69.9642 )

[node name="pos19" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -18.8882, -73.6211 )

[node name="pos20" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -11.3759, -75.9821 )

[node name="pos21" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -4.10901, -76.725 )

[node name="pos22" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 39.303, -29.204 )

[node name="pos23" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 42.6165, -25.5699 )

[node name="pos24" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 44.2771, -21.8769 )

[node name="pos25" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 45.8206, -15.1397 )

[node name="pos26" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 46.5799, -10.258 )

[node name="pos27" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 47.7313, -4.71033 )

[node name="pos28" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 45.483, 0.914001 )

[node name="pos29" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 45.8472, 6.3851 )

[node name="pos30" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 45.2191, 13.7123 )

[node name="pos31" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 41.6265, 18.9847 )
scale = Vector2( 1.00421, 0.893573 )

[node name="pos32" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 35.7985, 24.703 )

[node name="pos33" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 29.2462, 28.0267 )
scale = Vector2( 1.00421, 0.893573 )

[node name="pos34" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 24.4937, 32.5536 )

[node name="pos35" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 20.2239, 36.5491 )
scale = Vector2( 1.00421, 0.893573 )

[node name="pos36" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 13.9216, 37.578 )

[node name="pos37" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( 6.32135, 38.5352 )
scale = Vector2( 1.00421, 0.893573 )

[node name="pos38" type="Position2D" parent="PlayerArea2D/MuzzlePositions"]
position = Vector2( -1.15143, 41.1369 )

[node name="ChasePositions" type="Node2D" parent="."]

[node name="LeftShooting" type="Position2D" parent="ChasePositions"]
position = Vector2( -80, 14 )

[node name="LeftKicking" type="Position2D" parent="ChasePositions"]
position = Vector2( -30, 14 )

[node name="RightShooting" type="Position2D" parent="ChasePositions"]
position = Vector2( 80, 14 )

[node name="RightKicking" type="Position2D" parent="ChasePositions"]
position = Vector2( 30, 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HorseGallop = SubResource( 48 )

[node name="AR_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="bleeding_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="dodge_cooldown" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="PlayerArea2D/PlayerAnimatedSprite" to="." method="_on_PlayerAnimatedSprite_animation_finished"]
